[package]
name = "blather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.2"
actix-web-actors = "4.1.0"
actix = "0.13.0"
firestore-db-and-auth = "0.6.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
envy = "0.4.2"
async_once = "0.2.6"
blake3 = "1.3.1"
chrono = "0.4.22"
git2 = "0.15.2"
anyhow = "1.0.65"
